Update the i18n of nav.html

--- a/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
+++ b/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
@@ -52,18 +52,25 @@ MyAppointment_Appointments Description=Appointments Description
 MyAppointment_Current Status=Current Status
 MyAppointment_Operator ID=Operator ID
 
+# Nav.html
+Email=Email
+Call Now=Call Now
+My Account=My Account
+Toggle navigation=Toggle navigation
+Home=Home
+News=News
+Services=Services
+Gallery=Gallery
+Blog=Blog
+Contact=Contact
 
+footer1=Healing Paws Veterinary Hospital - Your One-Call-Away Pet Butler
+footer2=Beijing, Shanghai, Hangzhou
+footer3=Recent Posts
+footer4=Post Title
+Contact Us=Contact Us
 
-
-
-
-
-
-
-
-
-
-
+# index.html
 
 
 
