--- a/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_zh.properties
+++ b/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_zh.properties
@@ -53,3 +53,21 @@ MyAppointment_Construction Time=下单时间
 MyAppointment_Appointments Description=病情描述
 MyAppointment_Current Status=当前状态
 MyAppointment_Operator ID=订单操作员
+
+# Nav.html
+Email=邮箱
+Call Now=立刻拨打
+My Account=我的帐户
+Toggle navigation=切换导航
+Home=主页
+News=最新消息
+Services=医院服务
+Gallery=精彩瞬间
+Blog=最新动态
+Contact=联系我们
+
+footer1=治愈爪动物医院 - 你 随叫随到的宠物管家
+footer2=北京、上海、杭州
+footer3=最新发布
+footer4=文章的标题
+Contact Us=联络我们
