Finish the localization of customer pages&&Ad cookie for language unity
but still a little problem with the translation of contents in wtform :-(

--- a/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
+++ b/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
@@ -52,6 +52,9 @@ MyAppointment_Appointments Description=Appointments Description
 MyAppointment_Current Status=Current Status
 MyAppointment_Operator ID=Operator ID
 
+Edit=Edit
+Delete=Delete
+
 # Nav.html
 Email=Email
 Call Now=Call Now
@@ -146,8 +149,32 @@ Cat=Cat
 Dog=Dog
 submit now=submit now
 
+# Customer_login
+Welcome!=Welcome!
+Let's get start.=Let's get start.
+Username=Username
+Password=Password
+Remember ME=Remember ME
+Don't have one?=Don't have one?
+Join us now!=Join us now!
+Register An Account=Register An Account
 
+# Customer_signup
+Please fill the form below.=Please fill the form below.
+Repeat Password=Repeat Password
+Already have one!=Already have one!
+Login now!=Login now!
+Login My Account=Login My Account
 
+#Customer_mypets
+Add Pet=Add Pet
+Name=Name
+Category=Category
 
-
-
+# Customer_questions
+Do you have any questions?=Do you have any questions?
+Ask Question=Ask Question
+Unanswered Questions=Unanswered Questions
+No questions=No questions
+Answered Questions=Answered Questions
+No answered questions=No answered questions
