--- a/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_zh.properties
+++ b/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_zh.properties
@@ -54,6 +54,9 @@ MyAppointment_Appointments Description=病情描述
 MyAppointment_Current Status=当前状态
 MyAppointment_Operator ID=订单操作员
 
+Edit=编辑
+Delete=删除
+
 # Nav.html
 Email=邮箱
 Call Now=立刻拨打
@@ -147,6 +150,40 @@ Request Appointment=预约一次治疗
 Cat=猫猫
 Dog=狗狗
 submit now=提交预约单
+
+# Customer_login
+Welcome!=欢迎！
+Let's get start.=开始登陆。
+Username=你的用户名
+Password=输入密码
+Remember ME=请记住我
+Don't have one?=还没有账号？
+Join us now!=现在就加入我们！
+Register An Account=注册账号
+
+# Customer_signup
+Please fill the form below.=请填写注册的表格
+Repeat Password=再次输入密码
+Already have one!=已经有账号！
+Login now!=现在就去登陆！
+Login My Account=登陆我的账号
+
+#Customer_mypets
+Add Pet=添加新的宠物
+Name=昵称
+Category=种类
+
+# Customer_questions
+Do you have any questions?=你想咨询点什么？
+Ask Question=现在咨询
+Unanswered Questions=未回答的问题
+No questions=您还没有咨询过哦
+Answered Questions=已回答的问题
+No answered questions=还没有回复过的问题
+
+
+
+
 
 
 
