Fix translation error; Add links to buttons in index.html

--- a/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
+++ b/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
@@ -68,7 +68,7 @@ Blog=Blog
 Contact=Contact
 
 footer1=Healing Paws Veterinary Hospital - Your One-Call-Away Pet Butler
-footer2=Beijing, Shanghai, Hangzhou
+footer2=Beijing, Shanghai, Chengdu
 footer3=Recent Posts
 footer4=Post Title
 Contact Us=Contact Us
@@ -82,7 +82,7 @@ Register an Account=Register an Account
 
 Best Pet Medical Services=Best Pet Medical Services
 News3=Choose Healing Paws Veterinary Hospital
-News4=Beijing / Shanghai / Hangzhou
+News4=Beijing / Shanghai / Chengdu
 See More=See More
 
 We Care About=We Care About
@@ -110,7 +110,7 @@ P8=Online veterinary doctor
 P9=If you have any questions about your pet's health, please feel free to contact us online.
 P10=Three location of our hospital
 P11=Choose nearest one
-P12=Our hospitals are located in Beijing, Shanghai and Hangzhou, contact us!
+P12=Our hospitals are located in Beijing, Shanghai and Chengdu, contact us!
 P13=Professional Pet's Care
 Professional=Professional
 P14=We have the most professional veterinary treatment team, 24 hours to provide you with services.
@@ -120,19 +120,19 @@ T2=The pet treatment at this hospital is really sweet.They keep my dog healthy a
 T3=Give my dog regular checkups so he can spend more time with me.The treatment in this hospital is very professional.Wow!!!!
 T4=My dog suddenly fell ill, the hospital quickly helped me solve the problem, my dog is now very healthy!
 T5=It's reassuring that I can check my pet's health at any time.I don't have to worry about my pet's health all the time.
-T6=This hospital is the best pet hospital I have ever seen. They have set up a branch in Hangzhou. Pet owners in Hangzhou no longer have to worry about not having a good pet hospital.
+T6=This hospital is the best pet hospital I have ever seen. They have set up a branch in Chengdu. Pet owners in Chengdu no longer have to worry about not having a good pet hospital.
 T7=This hospital provides bilingual service!!This is great, as a foreigner, I don't worry about communication barriers anymore, my pet will be healthier!
 
 Beijing=Beijing
 Shanghai=Shanghai
-Hangzhou=Hangzhou
+Chengdu=Chengdu
 
 Beijing Healing Paws=Beijing Healing Paws
 Shanghai Healing Paws=Shanghai Healing Paws
-Hangzhou Healing Paws=Hangzhou Healing Paws
+Chengdu Healing Paws=Chengdu Healing Paws
 C1=Healing Paws Veterinary Hospital is located  in the city center with convenient transportation. Please feel free to contact us at any time. 
 C2=We provide 24-hour emergency services and outpatient services for more than 8 hours per day. Get ALl time support for emergency. We are here for anytime. Get Connect with us for any urgency.
-C3=Address£ºCity Centre Mall
+C3=Address: City Centre Mall
 C4=Tel.: 183-983-789
 C5=24 Hours Service & Online Vet
 
@@ -140,7 +140,7 @@ Q1=Why Should I choose Healing Paws
 Q2=Covid - 19, special time.
 Q3=What about our services?
 
-A1=Healing Paws Veterinery Hospital is a full-service veterinary medical facility, located in Beijing, Shanghai and Hangzhou of China. The professional and courteous staff at Healing Paws Veterinary Hospital seeks to provide the best possible medical care, surgical care and regular care for pets. Our commitment to veterinary excellence is reflected in the clinic obtaining the prestigious AAHA accreditation 50 years in a row!
+A1=Healing Paws Veterinery Hospital is a full-service veterinary medical facility, located in Beijing, Shanghai and Chengdu of China. The professional and courteous staff at Healing Paws Veterinary Hospital seeks to provide the best possible medical care, surgical care and regular care for pets. Our commitment to veterinary excellence is reflected in the clinic obtaining the prestigious AAHA accreditation 50 years in a row!
 A2=Healing Paws is taking steps to make sure we can continue to serve you and maintain the health and safety of our patients, staff as our nation deals with the COVID-19 pandemic. **any wellness appointments already scheduled before today will be serviced unless clients are showing signs of illness. Please feel free to call an re-schedule if needed** For any pet visit: We would like to stress If anyone in the household has any symptoms and has to been officially quarantine please call ahead to cancel appointments.
 A3=Our services don't end at our hospital doors.  As a member of the Healing Paws family, our veterinarians have access to extensive medical resources, not the least of which is the Healing Paws knowledge base, which allows our doctors to tap into the collected knowledge of over 4,000 Healing Paws veterinarians. And if your pet ever needs truly advanced veterinary care, Healing Paws Specialty Hospitals are ready to help.
 
@@ -178,3 +178,7 @@ Unanswered Questions=Unanswered Questions
 No questions=No questions
 Answered Questions=Answered Questions
 No answered questions=No answered questions
+
+FAQ=FAQ
+Copyright=Copyright 2020. All Rights Reserved by
+Healing Paws Veterinary Hospital=Healing Paws Veterinary Hospital
