Fixed bug in customer_appointment
the pages of customer-delete-appointment and edit-fixed - appointment cannot load the scripts in the parents page.

--- a/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
+++ b/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
@@ -28,10 +28,10 @@ Add your appointment details here=Add your appointment details here!
 Close=Close
 
 Emergency=Emergency
-Dont worry we got you=Don't worry, we got you£¡
+Dont worry we got you=Do not worry, we got you!
 Call now=Call now
 Emergency Appointment=Emergency Appointment
-Just choose one pet=Just choose one pet and your location£¡
+Just choose one pet=Just choose one pet and your location!
 
 Choose pets=Choose pets
 Location=Location
