Add show_appointments  in customer_console_main,  done the en version

--- a/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
+++ b/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
@@ -182,3 +182,28 @@ No answered questions=No answered questions
 FAQ=FAQ
 Copyright=Copyright 2020. All Rights Reserved by
 Healing Paws Veterinary Hospital=Healing Paws Veterinary Hospital
+
+# show appointment card in customer_console_main
+This year I have made=This year I have made 
+appointments=appointments
+Appointment Status=Appointment Status:
+
+Ongoing=Ongoing
+Unchecked=Unchecked
+Finished=Finished
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
