--- a/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_zh.properties
+++ b/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_zh.properties
@@ -185,8 +185,14 @@ FAQ=问题解答
 Copyright=版权 2020. 版权所有
 Healing Paws Veterinary Hospital=治愈爪兽医院
 
+# show appointment card in customer_console_main
+This year I have made=今年我已经下单了
+appointments=个预约
+Appointment Status=预约状态：
 
-
+Ongoing=进行中
+Unchecked=等待确认中
+Finished=已完成
 
 
 
