Add hospital-news card to customer_console_main

--- a/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_zh.properties
+++ b/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_zh.properties
@@ -194,6 +194,11 @@ Ongoing=进行中
 Unchecked=等待确认中
 Finished=已完成
 
+# news card in customer_console_main
+Latest News=治愈爪的最新消息
+Previous=上一页
+Next=下一页
+
 
 
 
