fixed translation bug on customer_main

--- a/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
+++ b/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
@@ -188,6 +188,10 @@ This year I have made=This year I have made
 appointments=appointments
 Appointment Status=Appointment Status:
 
+Ongoing=Ongoing
+Unchecked=Unchecked
+Finished=Finished
+
 # news card in customer_console_main
 Latest News=Healing Paws Latest News
 Previous=Previous
