Fixed bilingualism of customer portal

--- a/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
+++ b/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
@@ -197,16 +197,22 @@ Latest News=Healing Paws Latest News
 Previous=Previous
 Next=Next
 
+#customer_appointments
+Surgery Date=Surgery Date
+Meeting Date=Meeting Date
 
+Not Decided=Not Decided
+None=None
 
+#customer_mypets
+Has Ongoing Appointment=Has Ongoing Appointment?
+Yes=Yes
+No=No
+Checked=Checked
+Applied but not checked yet=Applied but not checked yet
 
-
-
-
-
-
-
-
-
-
-
+# personal_information
+My Information=My Information
+Edit Information=Edit Information
+Change Password=Change Password
+My Account=My Account
