--- a/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_zh.properties
+++ b/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_zh.properties
@@ -199,12 +199,25 @@ Latest News=治愈爪的最新消息
 Previous=上一页
 Next=下一页
 
+#customer_appointments
+Surgery Date=手术日期
+Meeting Date=会议日期
 
+Not Decided=未决定
+None=指派中
 
+#customer_mypets
+Has Ongoing Appointment=进行中的治疗？
+Yes=是的
+No=没有
+Checked=已确认
+Applied but not checked yet=已申请但未确认
 
-
-
-
+# personal_information
+My Information=我的信息
+Edit Information=编辑信息
+Change Password=更改密码
+My Account=我的账户
 
 
 
