First draft version

--- a/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
+++ b/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
@@ -1,5 +1,5 @@
 User Name=User Name
-
+Staff Name=Staff Name
 Password=Password
 
 Login=Login
@@ -216,3 +216,48 @@ My Information=My Information
 Edit Information=Edit Information
 Change Password=Change Password
 My Account=My Account
+
+# staff_base
+Control System=Control System
+Dropdown=Dropdown
+Search with id or name=Search with id or name
+Submit=Submit
+Check Appointments=Check Appointments
+Check Questions=Check Questions
+Check Pets=Check Pets
+
+#control system
+Put on a smile face to every customer=Put on a smile face to every customer
+Staff=Staff
+last login=last login
+
+# staff_check_appointments
+PetCategory=Pet Type
+Operation=Operation
+view=view
+Menu=Menu
+Take in=Take in
+Finish=Finish
+Confirm Surgery Date=Confirm Surgery Date
+Complete Surgery=Complete Surgery
+Inform Customer for Releasing=Inform Customer for Releasing
+Was Taken=Was Taken
+Ready for release=Ready for release
+Surgery Date Confirmed=Surgery Date Confirmed
+Surgery Completed=Surgery Completed
+none=none
+Check=Check
+Released=Released
+Active=Active
+
+#staff questions
+Click question to check detail and answer it=Click question to check detail and answer it
+Title=Title
+Time=Time
+Please answer the question=Please answer the question
+Answer=Answer
+Content=Content
+
+Pets Information=Pets Information
+User ID=User ID
+Please fill the form below=Please fill the form below
