--- a/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_zh.properties
+++ b/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_zh.properties
@@ -1,5 +1,5 @@
 User Name=用户名
-
+Staff Name=员工名
 Password=密码
 
 Login=登陆
@@ -220,8 +220,46 @@ Change Password=更改密码
 My Account=我的账户
 
 
+# staff_base
+Control System=控制系统
+Dropdown=下拉菜单
+Search with id or name=用id或名字搜索
+Submit=提交
+Check Appointments=检查预约
+Check Questions=检查问题
+Check Pets=检查宠物
 
+#control system
+Put on a smile face to every customer=微笑面对每个客户
+Staff=员工
+last login=最后登录
 
+PetCategory=宠物种类
+Operation=操作
+view=查看
+Menu=菜单
+Take in=收纳
+Finish=结束
+Confirm Surgery Date=确定手术日期
+Complete Surgery=已完成手术
+Inform Customer for Releasing=通知客户取走宠物
+Was Taken=已收纳
+Ready for release=准备取走
+Surgery Date Confirmed=手术日期已确定
+Surgery Completed=手术已完成
+none=无
+Check=确认
+Released=客户已取走
+Active=激活
 
+#staff_questions
+Click question to check detail and answer it=点击问题查看细节并回答
+Title=标题
+Time=时间
+Please answer the question=请回答问题
+Answer=回答
+Content=内容
 
-
+Pets Information=宠物信息
+User ID=用户ID
+Please fill the form below=请填写以下信息
