some translation modified

--- a/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
+++ b/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
@@ -261,3 +261,14 @@ Content=Content
 Pets Information=Pets Information
 User ID=User ID
 Please fill the form below=Please fill the form below
+
+#staff operate appointment
+Operate_Staff_ID = Operate Staff ID
+No_operator_yet = No operator yet
+Appointment_Description = Appointment Description
+Appointment_time = Appointment time
+Appointment_ID = Appointment ID
+Appointment_status = Appointment status
+Appointment_type = Appointment type
+pet_name = Pet Name
+pet_owner_name = Pet Owner Name
