--- a/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_zh.properties
+++ b/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_zh.properties
@@ -263,3 +263,14 @@ Content=内容
 Pets Information=宠物信息
 User ID=用户ID
 Please fill the form below=请填写以下信息
+
+#staff_operate_appointment
+Operate_Staff_ID = 手术医师ID
+No_operator_yet = 尚未有手术医师
+Appointment_Description = 预约描述
+Appointment_time = 预约时间
+Appointment_ID = 预约ID
+Appointment_status = 预约状态
+Appointment_type = 预约种类
+pet_name = 宠物姓名
+pet_owner_name = 宠物主人姓名
