Modified some bugs in staff check pets and staff login

--- a/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
+++ b/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
@@ -7,7 +7,7 @@ Btn Change = Change Language
 
 # Customer_console_base
 Healing Paws=Healing Paws
-Change Language=Change to Chinese
+Change Language=切换为中文
 Logout=Logout
 Lock Screen=Lock Screen
 
