--- a/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_zh.properties
+++ b/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_zh.properties
@@ -8,7 +8,7 @@ Btn Change = 切换语言
 
 # Customer_console_base
 Healing Paws=治愈爪宠物医院
-Change Language=   切换为英文  
+Change Language=Change to English
 Logout=退出登录
 Lock Screen=锁定屏幕
 
