solved searching bug

--- a/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
+++ b/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_en.properties
@@ -10,6 +10,7 @@ Healing Paws=Healing Paws
 Change Language=切换为中文
 Logout=Logout
 Lock Screen=Lock Screen
+search result =Here is the searching result for
 
 Main=Main
 My Appointments=My Appointments
@@ -272,3 +273,5 @@ Appointment_status = Appointment status
 Appointment_type = Appointment type
 pet_name = Pet Name
 pet_owner_name = Pet Owner Name
+
+Appointment=Appointment
