--- a/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_zh.properties
+++ b/HospitalSystem/HospitalSystem/systemapp/static/i18n/strings_zh.properties
@@ -12,6 +12,8 @@ Change Language=Change to English
 Logout=退出登录
 Lock Screen=锁定屏幕
 
+search result = 以下为搜索结果关于 
+
 Main=主页
 My Appointments=我的预约
 My Pets=我的宠物
@@ -274,3 +276,4 @@ Appointment_status = 预约状态
 Appointment_type = 预约种类
 pet_name = 宠物姓名
 pet_owner_name = 宠物主人姓名
+Appointment=预约
